new codes added to both test and main solution file

--- a/flight_delay_prediction_onpremises.ipynb
+++ b/flight_delay_prediction_onpremises.ipynb
@@ -523,6 +523,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "outputs": [],
+   "source": [
+    "date_dict = {'year': df_temp[\"Year\"], 'month': df_temp[\"Month\"], 'day': df_temp[\"DayofMonth\"]}\n",
+    "# merge year month and day into one column\n",
+    "df_temp['Date'] = pd.to_datetime(date_dict)\n",
+    "df_temp.Date.head()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,10 +544,10 @@
     "print(\"The #rows and #columns are \", df_temp.shape[0] , \" and \", df_temp.shape[1])\n",
     "print(\"The years in this dataset are: \", list(set(df_temp.Year)))\n",
     "print(\"The months covered in this dataset are: \", list(set(df_temp.Month)))\n",
-    "print(\"The date range for data is :\" , min(<CODE>), \" to \", max(<CODE>))\n",
-    "print(\"The airlines covered in this dataset are: \", list(<CODE>))\n",
-    "print(\"The Origin airports covered are: \", list(<CODE>))\n",
-    "print(\"The Destination airports covered are: \", list(<CODE>))"
+    "print(\"The date range for data is :\" , min(df_temp.Date), \" to \", max(df_temp.Date))\n",
+    "print(\"The airlines covered in this dataset are: \", list(set(df_temp.Reporting_Airline)))\n",
+    "print(\"The Origin airports covered are: \", list(set(df_temp.Origin)))\n",
+    "print(\"The Destination airports covered are: \", list(set(df_temp.Dest)))"
    ]
   },
   {
