--- a/flight_delay_prediction_onpremises.ipynb
+++ b/flight_delay_prediction_onpremises.ipynb
@@ -85,11 +85,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-28T15:30:10.285528800Z",
-     "start_time": "2023-10-28T15:30:09.190590Z"
+     "end_time": "2023-10-30T15:45:23.783600800Z",
+     "start_time": "2023-10-30T15:45:23.770823500Z"
     }
    },
    "outputs": [],
@@ -140,18 +140,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-30T15:52:08.519683200Z",
+     "start_time": "2023-10-30T15:52:08.475172Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# download the files\n",
     "\n",
     "# <note: make them all relative, absolute path is not accepted>\n",
-    "zip_path = 'path to the zip files'\n",
+    "zip_path = 'data/onedrive_data.zip'\n",
     "base_path = 'the folder that contains the whole project (data and code)'\n",
-    "csv_base_path = 'path to where you want the zip files extracted'\n",
+    "csv_base_path = 'data/extracted_files'\n",
     "\n",
-    "!mkdir -p {csv_base_path}"
+    "# make a directory to store the extracted files\n",
+    "Path(csv_base_path).mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
@@ -164,6 +170,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting data/onedrive_data.zip \n"
+     ]
+    }
+   ],
+   "source": [
+    "with ZipFile(zip_path, 'r') as z: \n",
+    "            print(f'Extracting {zip_path} ') \n",
+    "            z.extractall(path=csv_base_path)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-30T15:55:34.895964Z",
+     "start_time": "2023-10-30T15:55:32.685654700Z"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -172,11 +203,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "ExecuteTime": {
+     "end_time": "2023-10-30T16:00:37.366048400Z",
+     "start_time": "2023-10-30T16:00:00.563088400Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2014_1.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2014_10.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2014_11.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2014_12.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2014_2.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2014_3.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2014_4.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2014_5.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2014_6.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2014_7.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2014_8.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2014_9.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2015_1.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2015_10.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2015_11.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2015_12.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2015_2.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2015_3.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2015_4.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2015_5.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2015_6.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2015_7.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2015_8.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2015_9.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2016_1.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2016_10.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2016_11.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2016_12.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2016_2.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2016_3.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2016_4.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2016_5.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2016_6.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2016_7.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2016_8.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2016_9.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2017_1.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2017_10.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2017_11.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2017_12.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2017_2.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2017_3.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2017_4.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2017_5.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2017_6.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2017_7.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2017_8.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2017_9.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2018_1.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2018_10.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2018_11.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2018_12.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2018_2.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2018_3.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2018_4.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2018_5.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2018_6.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2018_7.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2018_8.zip \n",
+      "Extracting data/extracted_files\\On_Time_Reporting_Carrier_On_Time_Performance_1987_present_2018_9.zip \n",
+      "Files Extracted\n"
+     ]
+    }
+   ],
    "source": [
     "def zip2csv(zipFile_name , file_path):\n",
     "    \"\"\"\n",
@@ -192,6 +295,9 @@
     "    except:\n",
     "        print(f'zip2csv failed for {zipFile_name}')\n",
     "\n",
+    "\n",
+    "# make list of all zip files in data/extracted_files\n",
+    "zip_files = [os.path.join(csv_base_path, f) for f in os.listdir(csv_base_path) if f.endswith('.zip')]\n",
     "for file in zip_files:\n",
     "    zip2csv(file, csv_base_path)\n",
     "\n",
@@ -200,11 +306,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-30T16:01:15.239655600Z",
+     "start_time": "2023-10-30T16:01:15.193042Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of csv files extracted is 60\n"
+     ]
+    }
+   ],
    "source": [
-    "# How many csv files have we extracted? write a code to answer it.\n"
+    "# How many csv files have we extracted? write a code to answer it.\n",
+    "print(f'Number of csv files extracted is {len(zip_files)}')"
    ]
   },
   {
@@ -216,13 +336,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-30T16:05:23.942767100Z",
+     "start_time": "2023-10-30T16:05:23.918735Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<IPython.lib.display.IFrame at 0x1a4e28c7820>",
+      "text/html": "\n        <iframe\n            width=\"1000\"\n            height=\"600\"\n            src=\"data\\extracted_files\\readme.html\"\n            frameborder=\"0\"\n            allowfullscreen\n            \n        ></iframe>\n        "
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.display import IFrame\n",
     "\n",
-    "IFrame(src=os.path.relpath(f\"{csv_base_path}readme.html\"), width=1000, height=600)"
+    "IFrame(src=os.path.relpath(f\"{csv_base_path}/readme.html\"), width=1000, height=600)"
    ]
   },
   {
