--- a/fazal_oncloud_v1a.ipynb
+++ b/fazal_oncloud_v1a.ipynb
@@ -236,6 +236,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Data Preprocessing"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e4ac0ce254866c42"
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "42ed0f67",
@@ -243,6 +253,7 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "train, validation = train_test_split(df, test_size=0.3)\n",
     "validation, test = train_test_split(validation, test_size = 0.5)"
    ]
@@ -258,6 +269,16 @@
     "validation.to_csv(\"v1a/validation.csv\", index = False, header = False)\n",
     "test.to_csv(\"v1a/test.csv\", index = False, header = False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Instantiating sagemaker session, getting default bucket and fetching the linear learner container"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f7bb6508cd3bd4b"
   },
   {
    "cell_type": "code",
@@ -278,10 +299,26 @@
    ],
    "source": [
     "import sagemaker\n",
+    "import boto3\n",
+    "from sagemaker import image_uris\n",
     "\n",
     "sess = sagemaker.Session()\n",
-    "bucket = sess.default_bucket()"
+    "bucket = sess.default_bucket()\n",
+    "\n",
+    "\n",
+    "region = boto3.Session().region_name\n",
+    "linear_learner_container = image_uris.retrieve(\"linear-learner\", region)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Defining paths to Amazon S3 bucket"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "37940ce59eab1cfa"
   },
   {
    "cell_type": "code",
@@ -297,18 +334,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "4d73f1c1",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "import boto3\n",
-    "from sagemaker import image_uris\n",
-    "\n",
-    "region = boto3.Session().region_name\n",
-    "linear_learner_container = image_uris.retrieve(\"linear-learner\", region)"
-   ]
+    "### Instantiating the estimator"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "34e2e1baaba554dd"
   },
   {
    "cell_type": "code",
@@ -336,17 +369,9 @@
     "    instance_count=1,\n",
     "    instance_type='ml.m5.large',\n",
     "    output_path='s3://{}/{}/output'.format(bucket,prefix)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "e7441369",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "linear_estimator.set_hyperparameters(predictor_type='binary_classifier')"
+    ")\n",
+    "# setting mini_batch_size to 100 since my dataset is large\n",
+    "linear_estimator.set_hyperparameters(predictor_type='binary_classifier', mini_batch_size=100)"
    ]
   },
   {
@@ -365,7 +390,8 @@
    "id": "9bc2f522",
    "metadata": {},
    "source": [
-    "# Training"
+    "# Training Phase\n",
+    "### Fitting the model"
    ]
   },
   {
@@ -1237,6 +1263,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Saving the data to current instance of sagemaker"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ff013796bf60b922"
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f5e0b320",
@@ -1245,6 +1281,16 @@
    "source": [
     "test_batch.to_csv(\"data/batch/batch_input_v1a.csv\", index = False, header = False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Uploading the batch test data to S3"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7780fa8963573791"
   },
   {
    "cell_type": "code",
@@ -1258,21 +1304,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a353ea1",
-   "metadata": {},
    "source": [
-    "Checking if the data has been uploaded"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0dbf9e38",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(batch_test_path)"
-   ]
+    "### Transforming the data"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "8f25536e83c6ab25"
   },
   {
    "cell_type": "code",
@@ -1461,6 +1499,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Checking Predicted Values"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "29277a8cfbcaade1"
+  },
+  {
    "cell_type": "code",
    "execution_count": 60,
    "id": "8a40a109",
@@ -1583,7 +1631,7 @@
    "id": "18c74ad4-c708-4e60-a39f-9a7f2a9686c9",
    "metadata": {},
    "source": [
-    "# Evaluation"
+    "## Model Evaluation"
    ]
   },
   {
@@ -1593,7 +1641,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predicted_series = y_pred['target'].apply(lambda x: 1 if x == 1 else 0)"
+    "predicted_values = y_pred['target'].apply(lambda x: 1 if x == 1 else 0)"
    ]
   },
   {
@@ -1611,51 +1659,11 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import accuracy_score, recall_score, f1_score\n",
-    "accuracy = accuracy_score(true_val_test, predicted_series)\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "known_labels = test_df.iloc[:, 0]\n",
+    "accuracy = accuracy_score(known_labels, predicted_values)\n",
     "print(\"Accuracy:\", accuracy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "id": "be19aed0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(245338,)"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "true_val_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "id": "5966db3c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(245338,)"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predicted_series.shape"
    ]
   },
   {
