--- a/fazal_oncloud_v1a.ipynb
+++ b/fazal_oncloud_v1a.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "### Dataset\n",
     "The provided dataset contains scheduled and actual departure and arrival times reported by certified US air carriers that account for at least 1 percent of domestic scheduled passenger revenues. The data was collected by the Office of Airline Information, Bureau of Transportation Statistics (BTS). The dataset contains date, time, origin, destination, airline, distance, and delay status of flights for flights between 2014 and 2018.\n",
-    "The data are in 60 compressed files, where each file contains a CSV for the flight details in a month for the five years (from 2014 - 2018). The data can be downloaded from this link: [https://ucstaff-my.sharepoint.com/:f:/g/personal/ibrahim_radwan_canberra_edu_au/Er0nVreXmihEmtMz5qC5kVIB81-ugSusExPYdcyQTglfLg?e=bNO312]. Please download the data files and place them on a relative path. Dataset(s) used in this assignment were compiled by the Office of Airline Information, Bureau of Transportation Statistics (BTS), Airline On-Time Performance Data, available with the following link: [https://www.transtats.bts.gov/Fields.asp?gnoyr_VQ=FGJ]. "
+    "The data are in 60 compressed files, where each file contains a CSV for the flight details in a month for the five years (from 2014 - 2018). The data can be downloaded from [this link](https://ucstaff-my.sharepoint.com/:f:/g/personal/ibrahim_radwan_canberra_edu_au/Er0nVreXmihEmtMz5qC5kVIB81-ugSusExPYdcyQTglfLg?e=bNO312). Please download the data files and place them on a relative path. Dataset(s) used in this assignment were compiled by the Office of Airline Information, Bureau of Transportation Statistics (BTS), Airline On-Time Performance Data, available with the [following link](https://www.transtats.bts.gov/Fields.asp?gnoyr_VQ=FGJ). "
    ]
   },
   {
@@ -1473,7 +1473,7 @@
    "id": "f4154a78-ff0a-4eec-b5f8-89381ae65a5c",
    "metadata": {},
    "source": [
-    "# Testing"
+    "# Testing Phase"
    ]
   },
   {
@@ -1484,18 +1484,9 @@
    "outputs": [],
    "source": [
     "import io\n",
+    "\n",
     "y_file = boto3.client(\"s3\").get_object(Bucket = bucket, Key = f\"{prefix}/batch_output/batch_input.csv.out\")\n",
     "y_pred = pd.read_csv(io.BytesIO(y_file[\"Body\"].read()), header = None, names = [\"Predicted\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "id": "7a91b209",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred[\"target\"] = y_pred.index"
    ]
   },
   {
@@ -1623,6 +1614,7 @@
     }
    ],
    "source": [
+    "y_pred[\"target\"] = y_pred.index\n",
     "y_pred"
    ]
   },
