--- a/fazal_oncloud_v1a.ipynb
+++ b/fazal_oncloud_v1a.ipynb
@@ -1628,16 +1628,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "81549f9d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predicted_values = y_pred['target'].apply(lambda x: 1 if x == 1 else 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 69,
    "id": "633ad279",
    "metadata": {},
@@ -1652,6 +1642,8 @@
    ],
    "source": [
     "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "predicted_values = y_pred['target'].apply(lambda x: 1 if x == 1 else 0)\n",
     "\n",
     "known_labels = test_df.iloc[:, 0]\n",
     "accuracy = accuracy_score(known_labels, predicted_values)\n",
