--- a/fazal_oncloud_v1a.ipynb
+++ b/fazal_oncloud_v1a.ipynb
@@ -2,65 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4738095a",
-   "metadata": {},
    "source": [
-    "# Problem: Predicting Airplane Delays\n",
-    "\n",
-    "The goals of this notebook are:\n",
-    "- Process and create a dataset from downloaded ZIP files\n",
-    "- Exploratory data analysis (EDA)\n",
-    "- Establish a baseline model and improve it\n",
-    "\n",
-    "## Introduction to business scenario\n",
-    "You work for a travel booking website that is working to improve the customer experience for flights that were delayed. The company wants to create a feature to let customers know if the flight will be delayed due to weather when the customers are booking the flight to or from the busiest airports for domestic travel in the US. \n",
-    "\n",
-    "You are tasked with solving part of this problem by leveraging machine learning to identify whether the flight will be delayed due to weather. You have been given access to the a dataset of on-time performance of domestic flights operated by large air carriers. You can use this data to train a machine learning model to predict if the flight is going to be delayed for the busiest airports.\n",
-    "\n",
-    "### Dataset\n",
-    "The provided dataset contains scheduled and actual departure and arrival times reported by certified US air carriers that account for at least 1 percent of domestic scheduled passenger revenues. The data was collected by the Office of Airline Information, Bureau of Transportation Statistics (BTS). The dataset contains date, time, origin, destination, airline, distance, and delay status of flights for flights between 2014 and 2018.\n",
-    "The data are in 60 compressed files, where each file contains a CSV for the flight details in a month for the five years (from 2014 - 2018). The data can be downloaded from [this link](https://ucstaff-my.sharepoint.com/:f:/g/personal/ibrahim_radwan_canberra_edu_au/Er0nVreXmihEmtMz5qC5kVIB81-ugSusExPYdcyQTglfLg?e=bNO312). Please download the data files and place them on a relative path. Dataset(s) used in this assignment were compiled by the Office of Airline Information, Bureau of Transportation Statistics (BTS), Airline On-Time Performance Data, available with the [following link](https://www.transtats.bts.gov/Fields.asp?gnoyr_VQ=FGJ). "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6f45d8cb",
-   "metadata": {},
-   "source": [
-    "# Step 1: Prepare the environment \n",
-    "\n",
-    "Use one of the labs which we have practised on with the Amazon Sagemakers where you perform the following steps:\n",
-    "1. Start a lab.\n",
-    "2. Create a notebook instance and name it \"oncloudproject\".\n",
-    "3. Increase the used memory to 25 GB from the additional configurations.\n",
-    "4. Open Jupyter Lab and upload this notebook into it.\n",
-    "5. Upload the two combined CVS files (combined_csv_v1.csv and combined_csv_v2.csv), which you created in Part A of this project."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "53c51c6c",
-   "metadata": {},
-   "source": [
-    "# Step 2: Build and evaluate simple models\n",
-    "\n",
-    "Write code to perform the follwoing steps:\n",
-    "1. Split data into training, validation and testing sets (70% - 15% - 15%).\n",
-    "2. Use linear learner estimator to build a classifcation model.\n",
-    "3. Host the model on another instance\n",
-    "4. Perform batch transform to evaluate the model on testing data\n",
-    "5. Report the performance metrics that you see better test the model performance \n",
-    "\n",
-    "Note: You are required to perform the above steps on the two combined datasets separatey and to comments on the difference."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "41a0afb2",
-   "metadata": {},
-   "source": [
-    "## Part 1: combined_csv_v1.csv"
-   ]
+    "## Part 1: combined_csv_v1.csv with Linear Estimator\n",
+    "Fazal Mahmud Niloy"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "41a0afb2"
   },
   {
    "cell_type": "code",
