--- a/fazal_oncloud_v2a.ipynb
+++ b/fazal_oncloud_v2a.ipynb
@@ -1973,9 +1973,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.789624925612828\n",
-      "Recall: 0.0\n",
-      "F1 Score: 0.0\n"
+      "Accuracy: 0.789624925612828\n"
      ]
     }
    ],
