--- a/fazal_oncloud_v1a.ipynb
+++ b/fazal_oncloud_v1a.ipynb
@@ -214,9 +214,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train.to_csv(\"v1a/train.csv\", index = False, header = False)\n",
-    "validation.to_csv(\"v1a/validation.csv\", index = False, header = False)\n",
-    "test.to_csv(\"v1a/test.csv\", index = False, header = False)"
+    "train.to_csv(\"data/v1a/train.csv\", index = False, header = False)\n",
+    "validation.to_csv(\"data/v1a/validation.csv\", index = False, header = False)\n",
+    "test.to_csv(\"data/v1a/test.csv\", index = False, header = False)"
    ]
   },
   {
@@ -276,10 +276,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prefix = \"flights_delay\"\n",
-    "train_path = sess.upload_data(path=\"v1a/train.csv\", key_prefix=prefix + \"/input/training\")\n",
-    "valid_path = sess.upload_data(path=\"v1a/validation.csv\", key_prefix=prefix + \"/input/validation\")\n",
-    "test_path = sess.upload_data(path=\"v1a/test.csv\", key_prefix=prefix + \"/input/test\")"
+    "prefix = \"flights_delay/v1a\"\n",
+    "train_path = sess.upload_data(path=\"train.csv\", key_prefix=prefix + \"/input/training\")\n",
+    "valid_path = sess.upload_data(path=\"validation.csv\", key_prefix=prefix + \"/input/validation\")\n",
+    "test_path = sess.upload_data(path=\"test.csv\", key_prefix=prefix + \"/input/test\")"
    ]
   },
   {
@@ -1189,7 +1189,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transformer = linear_estimator.transformer(instance_count=1, instance_type=\"ml.m4.xlarge\", assemble_with=\"Line\", output_path=f\"s3://{bucket}/{prefix}/batch_output\")"
+    "transformer = linear_estimator.transformer(instance_count=1, \n",
+    "                                           instance_type=\"ml.m4.xlarge\", \n",
+    "                                           assemble_with=\"Line\", \n",
+    "                                           output_path=f\"s3://{bucket}/{prefix}/batch_output\")"
    ]
   },
   {
@@ -1207,7 +1210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df = pd.read_csv(\"v1a/test.csv\")\n",
+    "test_df = pd.read_csv(\"data/v1a/test.csv\")\n",
     "test_batch = test_df[test_df.columns[1:]]"
    ]
   },
@@ -1248,7 +1251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_test_path = sess.upload_data(path=\"data/batch/batch_input_v1a.csv\", key_prefix=prefix + \"/batch_input\")"
+    "batch_test_path = sess.upload_data(path=\"batch_input_v1a.csv\", key_prefix=prefix + \"/batch_input\")"
    ]
   },
   {
