--- a/fazal_oncloud_v1b.ipynb
+++ b/fazal_oncloud_v1b.ipynb
@@ -145,10 +145,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prefix = \"flight_delays\"\n",
-    "train_path = sess.upload_data(path=\"train.csv\", key_prefix=prefix + \"/v1b/input/training\")\n",
-    "valid_path = sess.upload_data(path=\"validation.csv\", key_prefix=prefix + \"/v1b/input/validation\")\n",
-    "test_X_path = sess.upload_data(path=\"test_X.csv\", key_prefix=prefix + \"/v1b/input/test\")"
+    "prefix = \"flight_delays/v1b/\"\n",
+    "train_path = sess.upload_data(path=\"train.csv\", key_prefix=prefix + \"input/training\")\n",
+    "valid_path = sess.upload_data(path=\"validation.csv\", key_prefix=prefix + \"input/validation\")\n",
+    "test_X_path = sess.upload_data(path=\"test_X.csv\", key_prefix=prefix + \"input/test\")"
    ]
   },
   {
@@ -185,7 +185,7 @@
     "                              role=sagemaker.get_execution_role(), \n",
     "                              instance_count=1, \n",
     "                              instance_type='ml.m5.large',\n",
-    "                            output_path='s3://{}/{}/part2/output'.format(bucket,prefix))"
+    "                            output_path='s3://{}/{}/v1b/output'.format(bucket,prefix))"
    ]
   },
   {
