--- a/fazal_oncloud_v2a.ipynb
+++ b/fazal_oncloud_v2a.ipynb
@@ -5,7 +5,8 @@
    "id": "e1497d02",
    "metadata": {},
    "source": [
-    "# Part 1: combined_csv_v2.csv Linear Estimator"
+    "# Part 1: combined_csv_v2.csv Linear Estimator\n",
+    "Fazal Mahmud Niloy (u3228358)"
    ]
   },
   {
