--- a/flight_delay_prediction_onpremises.ipynb
+++ b/flight_delay_prediction_onpremises.ipynb
@@ -34,13 +34,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "# Write your answer here and turn the cell type into markdown"
-   ]
+    "With the constant improvement of cloud computing and the availability of data, it has become easier to use and deploy machine learning models on cloud so that it can be used as well as trained by a lot of data an interaction. So i think it is appropriate to deploy ML in this scenario."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -50,13 +50,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "# Write your answer here and turn the cell type into markdown"
-   ]
+    "The problem here is an interesting one. We have data from 2014 to 2018 about the flights and we want to predict if the flight will be delayed due to weather. The success metric here is the accuracy of the model. The desired ML output is a model that can predict if the flight will be delayed due to weather or by other factors. We will train the model on the data and test the predictions on the test data."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -66,13 +66,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "# Write your answer here and turn the cell type into markdown"
-   ]
+    "This is a classification problem. We have to classify if the flight will be delayed or not."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -111,9 +111,7 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "%matplotlib inline\n",
-    "\n",
-    "# <please add any other library or function you are aiming to import here>\n"
+    "%matplotlib inline\n"
    ]
   },
   {
@@ -357,6 +355,7 @@
    "source": [
     "from IPython.display import IFrame\n",
     "\n",
+    "\"\"\"IMPORTANT: please note that because of my jetbrains IDE the content of the html file is not displayed but it will be displayed in jupyter notebook\"\"\"\n",
     "IFrame(src=os.path.relpath(f\"{csv_base_path}/readme.html\"), width=1000, height=600)"
    ]
   },
@@ -1879,13 +1878,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "# Enter your answer here and turn the cell type into markdown"
-   ]
+    "**From the confusion matrix it can be summarised that the true positive are significantly more in number hence our model is trained to predict true positives more. This is an indication of imbalanced dataset.**"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -1900,13 +1899,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "### Provide a link for your Gitlab repository here"
-   ]
+    "[this link](https://gitlab.com/ahmedhesham1996/flight-delay-prediction)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -2019,15 +2018,6 @@
     "\n",
     "**Question**: Could bad weather due to rains, heavy winds, or snow lead to airplane delay? Let's check!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2887,13 +2877,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "# Enter answer here and turn the cell type into markdown\n"
-   ]
+    "After adding the weather data the columns has it was expected that the accuracy would increase but it did not. The accuracy has been almost the same."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -2934,13 +2924,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "# write your answers here"
-   ]
+    "- the model performance does not meet the business goal. The accuracy is high but the precision and recall are low. This is due to the imbalanced dataset.\n",
+    "- the model improved after adding the weather data. The accuracy increased but the precision and recall decreased. The most important technique was to add the weather data.\n",
+    "- the biggest challenge was to deal with large amount of data and dealing with the imbalanced dataset. Another challenge was to work on AWS sagemaker since there was a cap on the number of instances and the instance type. I had to upload big files to s3 and then download them to the notebook instance every time I wanted to work on the notebook.\n",
+    "- I learned how to deal with imbalanced dataset, how to use AWS sagemaker and how to deploy a model on cloud."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
