gitlab link updated

--- a/flight_delay_prediction_onpremises.ipynb
+++ b/flight_delay_prediction_onpremises.ipynb
@@ -1901,7 +1901,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "[this link](https://gitlab.com/ahmedhesham1996/flight-delay-prediction)"
+    "[original github repo link](https://github.com/nilooy5/Flight-Delay-Prediction)\n",
+    "[mirrored gitlab repo link](https://gitlab.com/nilmour/Flight-Delay-Prediction)\n"
    ],
    "metadata": {
     "collapsed": false
