final thougts added

--- a/fazal_oncloud_v1a.ipynb
+++ b/fazal_oncloud_v1a.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "source": [
     "## Part 1: combined_csv_v1.csv with Linear Estimator\n",
-    "Fazal Mahmud Niloy"
+    "Fazal Mahmud Niloy\n",
+    "\n",
+    "*final thoughts in end of the notebook*"
    ],
    "metadata": {
     "collapsed": false
@@ -1601,6 +1603,18 @@
     "accuracy = accuracy_score(known_labels, predicted_values)\n",
     "print(\"Accuracy:\", accuracy)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Final Thoughts\n",
+    "\n",
+    "It can be said that since our data was imbalanced i.e. there were not many data that represented that the flights has been delayed our models were biased towards identifying the flights that were not delayed. This is why our accuracy is high but our model is not good enough in my opinion. We can try to balance the data and then train the model again to see if we can get a better result."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c8c03ffc8b9ab9bd"
   }
  ],
  "metadata": {
