path changed for batch upload

--- a/fazal_oncloud_v1a.ipynb
+++ b/fazal_oncloud_v1a.ipynb
@@ -1253,7 +1253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_test_path = sess.upload_data(path=\"batch_input_v1a.csv\", key_prefix=prefix + \"/batch_input\")"
+    "batch_test_path = sess.upload_data(path=\"data/batch/batch_input_v1a.csv\", key_prefix=prefix + \"/batch_input\")"
    ]
   },
   {
