--- a/fazal_oncloud_v2a.ipynb
+++ b/fazal_oncloud_v2a.ipynb
@@ -1645,7 +1645,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_test_path = sess.upload_data(path=\"batch_input.csv\", key_prefix=prefix + \"/batch_input\")"
+    "batch_test_path = sess.upload_data(path=\"data/v2a/batch_input.csv\", key_prefix=prefix + \"/batch_input\")"
    ]
   },
   {
