unzipping the main file

--- a/fazal_oncloud_v1a.ipynb
+++ b/fazal_oncloud_v1a.ipynb
@@ -26,6 +26,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from zipfile import ZipFile\n",
+    "\n",
+    "with ZipFile('data.zip', 'r') as z: \n",
+    "            print(f'Extracting data ')\n",
+    "            z.extractall(path='data')"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "964b7fd384469764"
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "c782f5b3",
    "metadata": {},
